--- a/pom.xml
+++ b/pom.xml
@@ -1,52 +1,128 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+    <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.xhc.test</groupId>
-  <artifactId>test_encode</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <packaging>jar</packaging>
+    <parent>
+		<groupId>com.xhc.test</groupId>
+		<artifactId>test_parent</artifactId>
+	    <version>0.0.1-SNAPSHOT</version>
+	</parent>
+	<groupId>com.xhc.test</groupId>
+	<artifactId>test_encode</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
 
-  <name>test_encode</name>
+    <name>test_encode</name>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.app.mainClass>com.xhc.test.test_encode.App</project.app.mainClass>
+    </properties>
 
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.12</version>
-    </dependency>
+    <dependencies>
     
     
-    <dependency>
-        <groupId>commons-codec</groupId>
-        <artifactId>commons-codec</artifactId>
-        <version>1.10</version>
-    </dependency>
+		<dependency>
+		    <groupId>commons-codec</groupId>
+		    <artifactId>commons-codec</artifactId>
+		    <version>1.10</version>
+		</dependency>
     
-    <dependency>
-        <groupId>javax.mail</groupId>
-        <artifactId>mail</artifactId>
-        <version>1.4.7</version>
-    </dependency>
+	    <dependency>
+	        <groupId>javax.mail</groupId>
+	        <artifactId>mail</artifactId>
+	        <version>1.4.7</version>
+	    </dependency>
     
     
-  </dependencies>
+    </dependencies>
   
-  <build>
-     <plugins>
-         <plugin>
-             <groupId>org.apache.maven.plugins</groupId>
-             <artifactId>maven-compiler-plugin</artifactId>
-             <configuration>
-                 <source>1.6</source>
-                 <target>1.6</target>
-                 <encoding>${file_encoding}</encoding>
-             </configuration>
-         </plugin>
-     </plugins>
-  </build>
+    <build>
+        <plugins>
+            <!-- http://maven.apache.org/shared/maven-archiver/index.html -->            
+            <plugin>  
+	            <groupId>org.apache.maven.plugins</groupId>  
+	            <artifactId>maven-jar-plugin</artifactId>  
+	            <version>2.6</version>  
+	            <configuration>  
+	                <archive>  
+	                    <manifest>  
+	                        <addClasspath>true</addClasspath>  
+	                        <classpathPrefix>lib/</classpathPrefix>  
+	                        <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+	                        <mainClass>${project.app.mainClass}</mainClass>  
+	                    </manifest>  
+	                </archive>  
+	            </configuration>  
+	        </plugin>  
+	        <plugin>  
+	            <groupId>org.apache.maven.plugins</groupId>  
+	            <artifactId>maven-dependency-plugin</artifactId>  
+	            <version>2.10</version>  
+	            <executions>  
+	                <execution>  
+	                    <id>copy-dependencies</id>  
+	                    <phase>package</phase>  
+	                    <goals>  
+	                        <goal>copy-dependencies</goal>  
+	                    </goals>  
+	                    <configuration>  
+	                        <outputDirectory>${project.build.directory}/lib</outputDirectory>  
+	                    </configuration>  
+	                </execution>  
+	            </executions>  
+	        </plugin> 
+            
+            <!-- 
+            <plugin>  
+	            <groupId>org.apache.maven.plugins</groupId>  
+	            <artifactId>maven-assembly-plugin</artifactId>  
+	            <version>2.5.5</version>  
+	            <configuration>  
+	                <archive>  
+	                    <manifest>  
+	                        <mainClass>${project.app.mainClass}</mainClass>  
+	                    </manifest>  
+	                </archive>  
+	                <descriptorRefs>  
+	                    <descriptorRef>jar-with-dependencies</descriptorRef>  
+	                </descriptorRefs>  
+	            </configuration>  
+	            <executions>  
+	                <execution>  
+	                    <id>make-assembly</id>  
+	                    <phase>package</phase>  
+	                    <goals>  
+	                        <goal>single</goal>  
+	                    </goals>  
+	                </execution>  
+	            </executions>  
+	        </plugin>  
+             -->
+             
+            <!--  
+            <plugin>  
+				<groupId>org.apache.maven.plugins</groupId>  
+				<artifactId>maven-shade-plugin</artifactId>  
+				<version>2.4.1</version>  
+				<executions>  
+	                <execution>  
+	                    <phase>package</phase>  
+	                    <goals>  
+	                        <goal>shade</goal>  
+	                    </goals>  
+	                    <configuration>  
+	                        <transformers>  
+	                            <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">  
+	                                <mainClass>${project.app.mainClass}</mainClass>  
+	                            </transformer>  
+	                        </transformers>  
+	                    </configuration>  
+	                </execution>  
+	            </executions>  
+	        </plugin>
+	        -->
+	        
+        </plugins>
+    </build>
 </project>
